--- a/Webapp/WEB-INF/web.xml
+++ b/Webapp/WEB-INF/web.xml
@@ -1,13 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>guestbook</display-name>
+  
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
   
   <!--  Context parameter (전역 파라미터) -->
@@ -35,7 +31,7 @@
   <!-- Encoding Filter -->
   <filter>
   		<filter-name>encodingFilter</filter-name>
-  		<filter-class>org.springframework.web.CharacterEncodingFilter</filter-class>
+  		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
   		
   		<init-param>
   				<param-name>encoding</param-name>
