--- a/Webapp/WEB-INF/web.xml
+++ b/Webapp/WEB-INF/web.xml
@@ -4,6 +4,7 @@
   
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
+    <welcome-file>main.jsp</welcome-file>
   </welcome-file-list>
   
   <!--  Context parameter (전역 파라미터) -->
@@ -25,7 +26,7 @@
   
   <servlet-mapping>
   		<servlet-name>spring</servlet-name>
-  		<url-pattern>/</url-pattern>
+  		<url-pattern>*.do</url-pattern>
   </servlet-mapping>
   
   <!-- Encoding Filter -->
